{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 512,
  "lineage": "76a24414-734c-6e7a-c1af-149ddf2126ee",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/publicIPAddress",
                "name": "publicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/myPublicIP-assign2"
              }
            ],
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "location": "eastus",
            "name": "loadBalancer",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "NghiaUdacitylab"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lbbap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.myterraformpublicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/myNIC-assign2",
            "internal_domain_name_suffix": "3fux0ews2oyujfqqsitf30qljd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration-assign2",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/myPublicIP-assign3",
                "subnet_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/myVnet-assign2/subnets/mySubnet-assign2"
              }
            ],
            "location": "eastus",
            "name": "myNIC-assign2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "source": "NghiaUdacitylab"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip3",
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/myNIC-assign3",
            "internal_domain_name_suffix": "3fux0ews2oyujfqqsitf30qljd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration-assign3",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/myVnet-assign2/subnets/mySubnet-assign2"
              }
            ],
            "location": "eastus",
            "name": "myNIC-assign3",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "source": "NghiaUdacitylab"
            }
          },
          "dependencies": [
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/myNSG-assign2",
            "location": "eastus",
            "name": "myNSG-assign2",
            "resource_group_name": "Azuredevops",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInternetInbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "source": "NghiaUdacitylab"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_http_lb_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/myNSG-assign2/securityRules/AllowAzureLoadBalancerInBound",
            "name": "AllowAzureLoadBalancerInBound",
            "network_security_group_name": "myNSG-assign2",
            "priority": 702,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "80",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_same_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/myNSG-assign2/securityRules/AllowVnetInBound",
            "name": "AllowVnetInBound",
            "network_security_group_name": "myNSG-assign2",
            "priority": 700,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_same_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/myNSG-assign2/securityRules/AllowVnetOutBound",
            "name": "AllowVnetOutBound",
            "network_security_group_name": "myNSG-assign2",
            "priority": 701,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/myPublicIP-assign2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP-assign2",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "NghiaUdacitylab"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/myPublicIP-assign3",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP-assign3",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "NghiaUdacitylab"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/myVnet-assign2/subnets/mySubnet-assign2",
            "name": "mySubnet-assign2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "myVnet-assign2"
          },
          "dependencies": [
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/myVnet-assign2/subnets/mySubnet-assign2",
            "network_security_group_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/myNSG-assign2",
            "subnet_id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/myVnet-assign2/subnets/mySubnet-assign2"
          },
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "127d69e9-e3d2-44b1-9610-92265eea0b4b",
            "id": "/subscriptions/83316a40-5757-40fd-8e78-645eefac51b6/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/myVnet-assign2",
            "location": "eastus",
            "name": "myVnet-assign2",
            "resource_group_name": "Azuredevops",
            "tags": {
              "source": "NghiaUdacitylab"
            }
          }
        }
      ]
    }
  ]
}